commenting that req2 isn't done

--- a/lab1/lab1.ipynb
+++ b/lab1/lab1.ipynb
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "#req 2\n",
+    "#req 2 #NOT DONE\n",
     "step = 1000\n",
     "lst = []\n",
     "for i in range(500):\n",
