cleaned some var names, fixed loop label (lab1)

--- a/lab1/lab1.ipynb
+++ b/lab1/lab1.ipynb
@@ -46,9 +46,9 @@
     "    diff = 1000000000\n",
     "    \n",
     "    arr = []\n",
-    "    for ii in range(n, 10000 + n, n ):\n",
-    "        temp = approx_integration(ii, a, b, fx)\n",
-    "        print(\"i \", ii, \" res \", temp)\n",
+    "    for current_step in range(n, 10000 + n, n ):\n",
+    "        temp = approx_integration(current_step, a, b, fx)\n",
+    "        print(\"current_step \", current_step, \" res \", temp)\n",
     "        arr.append(temp)\n",
     "        \n",
     "        if abs(temp - res2[0]) < diff:\n",
@@ -59,7 +59,7 @@
     "    print(\"scipy integrate \", res2)\n",
     "    print(\"closet index \", closet_idx, \" with n \", (closet_idx+1) * n, \" with val \", arr[closet_idx])\n",
     "    \n",
-    "    return arr, res2, closet_idx #not sure if this method of getting best n is correct\n",
+    "    return arr, res2, closet_idx #not sure if this method of getting best n is correct (should we get it from 1/sqrt(n) instead?)\n",
     "\n"
    ]
   },
@@ -195,7 +195,7 @@
     "plt.plot(arr, label=\"Approximation\")\n",
     "plt.plot([res2[0]] * len(arr), label=\"Scipy\")\n",
     "plt.title(\"Approximation vs Scipy Integration\")\n",
-    "plt.xlabel(\"Number of Samples\")\n",
+    "plt.xlabel(f\"Number of Samples * {step}\")\n",
     "plt.ylabel(\"Integration Result\")\n",
     "plt.legend()\n",
     "plt.show()"
