--- a/lab2/TrafficLight_TODO.ipynb
+++ b/lab2/TrafficLight_TODO.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
     "# this part is related to requirement 2\n",
     "- use the same structure as in requirement 1 to simulate the post office example illustrated in the tutorial.\n",
     "- use the below main to test your requirement.\n",
-    "- also make sure to claculate the total waiting time for all customers and the customer numbers so that you can print the last statement.\n",
+    "- also make sure to calculate the total waiting time for all customers and the customer numbers so that you can print the last statement.\n",
     "    wait time for one customer = finish time - arrival time.\n",
     "- if the window close time arrives while the window is processing a customer , then it should complete the customer processsing  first then closes.\n",
     "\n",
@@ -437,17 +437,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "#not done yet\n",
+    "import queue\n",
+    "\n",
     "class State:\n",
     "    def __init__(self):\n",
-    "        self.total_customers = 0\n",
     "        self.wopen = False\n",
-    "        self.wbusy = False\n",
+    "        # self.wbusy = False\n",
+    "        self.total_customers = 0\n",
+    "        self.waiting_queue = []\n",
     "        self.total_wait = 0\n",
+    "        self.current_time=0\n",
+    "        self.closing_time=0\n",
     "        \n",
     "    def is_open(self):\n",
     "        return self.wopen \n",
@@ -464,18 +469,32 @@
     "    def turn_not_busy(self):\n",
     "        self.wbusy = False\n",
     "        \n",
-    "    def add_customer(self):\n",
-    "        self.total_customers = self.total_customers + 1\n",
-    "    def remove_customer(self):\n",
-    "        if self.total_customers > 0:\n",
-    "            self.total_customers = self.total_customers - 1\n",
-    "        else:\n",
-    "            print(\"Total customers = 0\")\n",
-    "    def total_customers(self):\n",
-    "        return self.total_customers\n",
-    "    # def purge_customers(self):\n",
-    "    #     self.total_customers = 0\n",
+    "    # def add_customer(self):\n",
+    "    #     self.total_customers = self.total_customers + 1\n",
+    "    # def remove_customer(self):\n",
+    "    #     if self.total_customers > 0:\n",
+    "    #         self.total_customers = self.total_customers - 1\n",
+    "    #     else:\n",
+    "    #         print(\"Total customers = 0\")\n",
+    "    # def total_customers(self):\n",
+    "    #     return self.total_customers\n",
     "    \n",
+    "    def serve_customer(self,customer):\n",
+    "        self.current_time += customer.p\n",
+    "        self.total_wait+= (self.current_time-customer.t)\n",
+    "        \n",
+    "        if(self.current_time >= self.closing_time):\n",
+    "            self.turn_closed()\n",
+    "\n",
+    "    def insert_in_queue(self,customer):\n",
+    "        heappush( self.waiting_queue, customer )\n",
+    "        self.total_customers+=1\n",
+    "    \n",
+    "    def get_queue_front(self):\n",
+    "        if len(self.waiting_queue) == 0:\n",
+    "            return None\n",
+    "        return heappop(self.waiting_queue)\n",
+    "\n",
     "    def __str__(self):\n",
     "        return \"Open window =\" + str(self.wopen) + \", customers=\" + str(self.total_customers)\n",
     "\n",
@@ -487,6 +506,7 @@
     "    def __str__(self):\n",
     "        return self.name + \"(\" + str( self.t ) + \",\" + str( self.p ) + \")\"\n",
     "    def action(self, queue, state):\n",
+    "        '''\n",
     "        if state.is_open() and (not state.is_busy()):\n",
     "                state.turn_busy()\n",
     "                # serve customer code whatever that means\n",
@@ -495,48 +515,66 @@
     "                queue.insert( WOPEN( self.t, self.p ) )\n",
     "        else:\n",
     "            state.add_customer()\n",
-    "        \n",
+    "        '''\n",
+    "        if state.is_open() and (not state.is_busy()):\n",
+    "                state.turn_busy()\n",
+    "                state.serve_customer(self)\n",
+    "        else:\n",
+    "            state.insert_in_queue(self)\n",
+    "            \n",
     "\n",
     "class WOPEN(Event):\n",
-    "    def __init__(self,time,closing_time):\n",
-    "        self.t = time\n",
+    "    def __init__(self,opening_time,opening_duration):\n",
+    "        self.t = opening_time\n",
     "        self.name = \"WOPEN\"\n",
-    "        self.closing_time = closing_time\n",
+    "        self.opening_duration=opening_duration\n",
+    "        self.closing_time=opening_time+opening_duration\n",
     "    def __str__(self):\n",
     "        return self.name + \"(\" + str( self.t ) + \")\"\n",
     "    def action(self,queue,state):\n",
+    "        '''\n",
     "        state.turn_open()\n",
     "        queue.insert( WCLOSE( self.t + self.closing_time ) ) #not in the psuedo code but where else would you schedule the closing event?\n",
     "        if state.total_customers > 0:\n",
     "            state.remove_customer()\n",
     "            queue.insert( WBUSY( self.t) )\n",
     "        else: state.turn_not_busy()\n",
+    "        '''\n",
+    "        state.close_time = self.closing_time\n",
+    "        state.current_time = self.t\n",
+    "        state.turn_open()\n",
+    "        while state.is_open():\n",
+    "            queue_front=state.get_queue_front()\n",
+    "            if queue_front is None:\n",
+    "                break\n",
+    "            else:\n",
+    "                state.serve_customer(queue_front)\n",
+    "\n",
+    "# class WBUSY(Event): \n",
+    "#     def __init__(self,time):\n",
+    "#         self.t = time\n",
+    "#         self.name = \"WBUSY\"\n",
+    "#     def __str__(self):\n",
+    "#         return self.name + \"(\" + str( self.t ) + \")\"\n",
+    "#     def action(self, queue, state):\n",
+    "#         state.turn_busy()\n",
     "        \n",
-    "class WBUSY(Event): \n",
-    "    def __init__(self,time):\n",
-    "        self.t = time\n",
-    "        self.name = \"WBUSY\"\n",
-    "    def __str__(self):\n",
-    "        return self.name + \"(\" + str( self.t ) + \")\"\n",
-    "    def action(self, queue, state):\n",
-    "        state.turn_busy()\n",
     "        \n",
-    "        \n",
-    "class WCLOSE(Event):\n",
-    "    def __init__(self,time):\n",
-    "        self.t = time\n",
-    "        self.name = \"WCLOSE\"\n",
-    "    def __str__(self):\n",
-    "        return self.name + \"(\" + str( self.t ) + \")\"\n",
-    "    def action(self, queue, state):\n",
-    "        state.turn_closed()\n",
-    "        print( \"total wait: \" + str( state.total_wait ) )\n",
+    "# class WCLOSE(Event):\n",
+    "#     def __init__(self,time):\n",
+    "#         self.t = time\n",
+    "#         self.name = \"WCLOSE\"\n",
+    "#     def __str__(self):\n",
+    "#         return self.name + \"(\" + str( self.t ) + \")\"\n",
+    "#     def action(self, queue, state):\n",
+    "#         state.turn_closed()\n",
+    "#         print( \"total wait: \" + str( state.total_wait ) )\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -548,15 +586,9 @@
       "CUSTOMER(1.1,3)\n",
       "CUSTOMER(2,1)\n",
       "WOPEN(2)\n",
-      "WBUSY(2)\n",
       "CUSTOMER(3,1)\n",
-      "WCLOSE(7)\n",
-      "total wait: 0\n",
       "WOPEN(10)\n",
-      "WBUSY(10)\n",
-      "WCLOSE(15)\n",
-      "total wait: 0\n",
-      "0.0\n"
+      "2.8\n"
      ]
     }
    ],
