--- a/lab2/TrafficLight_TODO.ipynb
+++ b/lab2/TrafficLight_TODO.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,21 +468,17 @@
     "        self.wbusy = True\n",
     "    def turn_not_busy(self):\n",
     "        self.wbusy = False\n",
-    "        \n",
-    "    # def add_customer(self):\n",
-    "    #     self.total_customers = self.total_customers + 1\n",
-    "    # def remove_customer(self):\n",
-    "    #     if self.total_customers > 0:\n",
-    "    #         self.total_customers = self.total_customers - 1\n",
-    "    #     else:\n",
-    "    #         print(\"Total customers = 0\")\n",
-    "    # def total_customers(self):\n",
-    "    #     return self.total_customers\n",
+    "   \n",
+    "    def total_customers(self):\n",
+    "        return self.total_customers\n",
     "    \n",
     "    def serve_customer(self,customer):\n",
     "        self.current_time += customer.p\n",
-    "        self.total_wait+= (self.current_time-customer.t)\n",
+    "        print(\"serving customer\",customer,\"at time\",self.current_time)\n",
+    "        self.total_wait += self.current_time - customer.t\n",
+    "        print(\"total wait\",self.total_wait)\n",
     "        \n",
+    "        print (self.closing_time)\n",
     "        if(self.current_time >= self.closing_time):\n",
     "            self.turn_closed()\n",
     "\n",
@@ -516,9 +512,9 @@
     "        else:\n",
     "            state.add_customer()\n",
     "        '''\n",
-    "        if state.is_open() and (not state.is_busy()):\n",
-    "                state.turn_busy()\n",
-    "                state.serve_customer(self)\n",
+    "        if state.is_open():\n",
+    "            # state.turn_busy()\n",
+    "            state.serve_customer(self)\n",
     "        else:\n",
     "            state.insert_in_queue(self)\n",
     "            \n",
@@ -528,7 +524,7 @@
     "        self.t = opening_time\n",
     "        self.name = \"WOPEN\"\n",
     "        self.opening_duration=opening_duration\n",
-    "        self.closing_time=opening_time+opening_duration\n",
+    "        self.closing_time = opening_time + opening_duration\n",
     "    def __str__(self):\n",
     "        return self.name + \"(\" + str( self.t ) + \")\"\n",
     "    def action(self,queue,state):\n",
@@ -540,7 +536,7 @@
     "            queue.insert( WBUSY( self.t) )\n",
     "        else: state.turn_not_busy()\n",
     "        '''\n",
-    "        state.close_time = self.closing_time\n",
+    "        state.closing_time = self.closing_time\n",
     "        state.current_time = self.t\n",
     "        state.turn_open()\n",
     "        while state.is_open():\n",
@@ -549,32 +545,12 @@
     "                break\n",
     "            else:\n",
     "                state.serve_customer(queue_front)\n",
-    "\n",
-    "# class WBUSY(Event): \n",
-    "#     def __init__(self,time):\n",
-    "#         self.t = time\n",
-    "#         self.name = \"WBUSY\"\n",
-    "#     def __str__(self):\n",
-    "#         return self.name + \"(\" + str( self.t ) + \")\"\n",
-    "#     def action(self, queue, state):\n",
-    "#         state.turn_busy()\n",
-    "        \n",
-    "        \n",
-    "# class WCLOSE(Event):\n",
-    "#     def __init__(self,time):\n",
-    "#         self.t = time\n",
-    "#         self.name = \"WCLOSE\"\n",
-    "#     def __str__(self):\n",
-    "#         return self.name + \"(\" + str( self.t ) + \")\"\n",
-    "#     def action(self, queue, state):\n",
-    "#         state.turn_closed()\n",
-    "#         print( \"total wait: \" + str( state.total_wait ) )\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -586,9 +562,22 @@
       "CUSTOMER(1.1,3)\n",
       "CUSTOMER(2,1)\n",
       "WOPEN(2)\n",
-      "CUSTOMER(3,1)\n",
-      "WOPEN(10)\n",
-      "2.8\n"
+      "serving customer CUSTOMER(0,2) at time 4\n",
+      "total wait 4\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'>=' not supported between instances of 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb Cell 16\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     e \u001b[39m=\u001b[39m Q\u001b[39m.\u001b[39mnext()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39mprint\u001b[39m( e )\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m     e\u001b[39m.\u001b[39;49maction(Q,S)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39mprint\u001b[39m(S\u001b[39m.\u001b[39mtotal_wait \u001b[39m/\u001b[39m S\u001b[39m.\u001b[39mtotal_customers)\n",
+      "\u001b[1;32m/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb Cell 16\u001b[0m line \u001b[0;36m1\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=101'>102</a>\u001b[0m     \u001b[39mbreak\u001b[39;00m\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=102'>103</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=103'>104</a>\u001b[0m     state\u001b[39m.\u001b[39;49mserve_customer(queue_front)\n",
+      "\u001b[1;32m/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb Cell 16\u001b[0m line \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mtotal wait\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtotal_wait)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m \u001b[39mprint\u001b[39m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclosing_time)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m \u001b[39mif\u001b[39;00m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcurrent_time \u001b[39m>\u001b[39;49m\u001b[39m=\u001b[39;49m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mclosing_time):\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mturn_closed()\n",
+      "\u001b[0;31mTypeError\u001b[0m: '>=' not supported between instances of 'int' and 'str'"
      ]
     }
    ],
