--- a/lab2/TrafficLight_TODO.ipynb
+++ b/lab2/TrafficLight_TODO.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,11 +437,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#not done yet\n",
     "import queue\n",
     "\n",
     "class State:\n",
@@ -482,7 +481,7 @@
     "        if(self.current_time >= self.closing_time):\n",
     "            self.turn_closed()\n",
     "\n",
-    "    def insert_in_queue(self,customer):\n",
+    "    def add_customer(self,customer):\n",
     "        heappush( self.waiting_queue, customer )\n",
     "        self.total_customers+=1\n",
     "    \n",
@@ -516,7 +515,7 @@
     "            # state.turn_busy()\n",
     "            state.serve_customer(self)\n",
     "        else:\n",
-    "            state.insert_in_queue(self)\n",
+    "            state.add_customer(self)\n",
     "            \n",
     "\n",
     "class WOPEN(Event):\n",
@@ -550,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -564,20 +563,22 @@
       "WOPEN(2)\n",
       "serving customer CUSTOMER(0,2) at time 4\n",
       "total wait 4\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'>=' not supported between instances of 'int' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb Cell 16\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     e \u001b[39m=\u001b[39m Q\u001b[39m.\u001b[39mnext()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39mprint\u001b[39m( e )\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m     e\u001b[39m.\u001b[39;49maction(Q,S)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39mprint\u001b[39m(S\u001b[39m.\u001b[39mtotal_wait \u001b[39m/\u001b[39m S\u001b[39m.\u001b[39mtotal_customers)\n",
-      "\u001b[1;32m/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb Cell 16\u001b[0m line \u001b[0;36m1\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=101'>102</a>\u001b[0m     \u001b[39mbreak\u001b[39;00m\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=102'>103</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=103'>104</a>\u001b[0m     state\u001b[39m.\u001b[39;49mserve_customer(queue_front)\n",
-      "\u001b[1;32m/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb Cell 16\u001b[0m line \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mtotal wait\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtotal_wait)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m \u001b[39mprint\u001b[39m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclosing_time)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m \u001b[39mif\u001b[39;00m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcurrent_time \u001b[39m>\u001b[39;49m\u001b[39m=\u001b[39;49m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mclosing_time):\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ramy_ashraf/Desktop/Modeling_Assignment/lab2/TrafficLight_TODO.ipynb#X21sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mturn_closed()\n",
-      "\u001b[0;31mTypeError\u001b[0m: '>=' not supported between instances of 'int' and 'str'"
+      "7\n",
+      "serving customer CUSTOMER(1,1) at time 5\n",
+      "total wait 8\n",
+      "7\n",
+      "serving customer CUSTOMER(1.1,3) at time 8\n",
+      "total wait 14.9\n",
+      "7\n",
+      "CUSTOMER(3,1)\n",
+      "WOPEN(10)\n",
+      "serving customer CUSTOMER(2,1) at time 11\n",
+      "total wait 23.9\n",
+      "15\n",
+      "serving customer CUSTOMER(3,1) at time 12\n",
+      "total wait 32.9\n",
+      "15\n",
+      "6.58\n"
      ]
     }
    ],
