--- a/lab2/TrafficLight_TODO.ipynb
+++ b/lab2/TrafficLight_TODO.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
     "        self.total_wait += self.current_time - customer.t\n",
     "        print(\"total wait\",self.total_wait)\n",
     "        \n",
-    "        print (self.closing_time)\n",
+    "        print (\"Closing Time: \",self.closing_time)\n",
     "        if(self.current_time >= self.closing_time):\n",
     "            self.turn_closed()\n",
     "\n",
@@ -485,7 +485,7 @@
     "        heappush( self.waiting_queue, customer )\n",
     "        self.total_customers+=1\n",
     "    \n",
-    "    def get_queue_front(self):\n",
+    "    def fornt_customer(self):\n",
     "        if len(self.waiting_queue) == 0:\n",
     "            return None\n",
     "        return heappop(self.waiting_queue)\n",
@@ -539,17 +539,17 @@
     "        state.current_time = self.t\n",
     "        state.turn_open()\n",
     "        while state.is_open():\n",
-    "            queue_front=state.get_queue_front()\n",
-    "            if queue_front is None:\n",
+    "            fornt_customer=state.fornt_customer()\n",
+    "            if fornt_customer is None:\n",
     "                break\n",
     "            else:\n",
-    "                state.serve_customer(queue_front)\n",
+    "                state.serve_customer(fornt_customer)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
