--- a/lab3_1/lab3.ipynb
+++ b/lab3_1/lab3.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ziad amr salah 1190103\n",
-    "ramy ashraf \n",
+    "Ziad Amr Salah 1190103\n",
+    "Ramy Ashraf    1190178\n",
     "\n",
     "spice Circuit simulation engine"
    ]
