--- a/lab2/TrafficLight_TODO.ipynb
+++ b/lab2/TrafficLight_TODO.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -563,21 +563,21 @@
       "WOPEN(2)\n",
       "serving customer CUSTOMER(0,2) at time 4\n",
       "total wait 4\n",
-      "7\n",
+      "Closing Time:  7\n",
       "serving customer CUSTOMER(1,1) at time 5\n",
       "total wait 8\n",
-      "7\n",
+      "Closing Time:  7\n",
       "serving customer CUSTOMER(1.1,3) at time 8\n",
       "total wait 14.9\n",
-      "7\n",
+      "Closing Time:  7\n",
       "CUSTOMER(3,1)\n",
       "WOPEN(10)\n",
       "serving customer CUSTOMER(2,1) at time 11\n",
       "total wait 23.9\n",
-      "15\n",
+      "Closing Time:  15\n",
       "serving customer CUSTOMER(3,1) at time 12\n",
       "total wait 32.9\n",
-      "15\n",
+      "Closing Time:  15\n",
       "6.58\n"
      ]
     }
