--- a/lab3_1/lab3.ipynb
+++ b/lab3_1/lab3.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,9 +92,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/ramy/Modeling_Assignment/lab3_1/lab3.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ramy/Modeling_Assignment/lab3_1/lab3.ipynb#W4sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     nodes \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(nodes)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ramy/Modeling_Assignment/lab3_1/lab3.ipynb#W4sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m nodes\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/ramy/Modeling_Assignment/lab3_1/lab3.ipynb#W4sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39massert\u001b[39;00m calculate_nodes(read_circuit_file(\u001b[39m\"\u001b[39m\u001b[39m./testcases/1.txt\u001b[39m\u001b[39m\"\u001b[39m)[\u001b[39m1\u001b[39m], read_circuit_file(\u001b[39m\"\u001b[39m\u001b[39m./testcases/1.txt\u001b[39m\u001b[39m\"\u001b[39m)[\u001b[39m2\u001b[39m], read_circuit_file(\u001b[39m\"\u001b[39m\u001b[39m./testcases/1.txt\u001b[39m\u001b[39m\"\u001b[39m)[\u001b[39m3\u001b[39m]) \u001b[39m==\u001b[39m [\u001b[39m'\u001b[39m\u001b[39m0\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m2\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m1\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "def calculate_nodes(Resistors, Vsources, Isources):\n",
     "    # Get list of all nodes\n",
@@ -120,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
